Bugfixes. Truncate button text across app. Remove post editor accordion. Fix Post Type switching in edit.

--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -18,3 +18,9 @@
 @mixin navbar-bg-position-dual($vertical-pos) {
   background-position: center $vertical-pos, center bottom;
 }
+
+@mixin truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
