--- a/app/assets/stylesheets/states/posts.edit.classify.scss
+++ b/app/assets/stylesheets/states/posts.edit.classify.scss
@@ -4,5 +4,9 @@
   .tags-group {
     @extend .input-group;
     width: 100%;
+
+    tags-input input {
+      width: 100%;
+    }
   }
 }
