--- a/app/assets/stylesheets/states/posts.edit.scss
+++ b/app/assets/stylesheets/states/posts.edit.scss
@@ -34,7 +34,7 @@
 
             .draft {
               @include make-md-column(4);
-              @extend .input-group;
+
 
               .bootstrap-switch {
                 width: 100%;
@@ -91,8 +91,6 @@
         @include make-md-column(12);
 
         .panel-tabs {
-          @extend .hidden-xs, .hidden-sm;
-
           .tab-content {
             @extend .panel;
             @extend .panel-default;
@@ -108,10 +106,6 @@
               @extend .form-group;
             }
           }
-        }
-
-        .panel-accordion {
-          @extend .hidden-md, .hidden-lg;
         }
       }
     }
@@ -132,10 +126,6 @@ span.has-error {
 span.has-error i::before {
   font-family: FontAwesome;
   content: ' \f071';
-}
-
-tags-input input {
-  width: 100%;
 }
 
 .form-control-feedback.select-feedback {
